src/objects/Booked_Car_Parking__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Parking Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Booked Car Parking</relationshipLabel>
        <relationshipName>Booked_Car_Parking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Parking_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Parking Charge</label>
        <referenceTo>Car_Parking_Charge__c</referenceTo>
        <relationshipLabel>Booked Car Parking</relationshipLabel>
        <relationshipName>Booked_Car_Parking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Booked Car Parking</relationshipLabel>
        <relationshipName>Booked_Car_Parking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Booked Car Parking</relationshipLabel>
        <relationshipName>Booked_Car_Parking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Booked Car Parking</relationshipLabel>
        <relationshipName>Booked_Car_Parking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Booked Car Parking</label>
    <nameField>
        <displayFormat>BCP-{0000}</displayFormat>
        <label>Booked Car Parking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booked Car Parking</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>